[gd_scene load_steps=8 format=2]

[ext_resource path="res://ASSETS/Sprites/FloorSwitchUnpressed.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/Sprites/FloorSwitchPressed.png" type="Texture" id=2]
[ext_resource path="res://SCENES/FloorSwitch.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "pressed",
"speed": 0.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "unpressed",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37.6397, 6.65579 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.0488, 5.76215 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 39.3253, 7.48013 )

[node name="FloorSwitch" type="StaticBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "unpressed"
centered = false

[node name="TopCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 47.6474, 44.7271 )
shape = SubResource( 2 )

[node name="BaseCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 48, 57.6518 )
shape = SubResource( 3 )

[node name="TopSensor" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopSensor"]
position = Vector2( 47.5537, 43.3823 )
shape = SubResource( 4 )
[connection signal="body_entered" from="TopSensor" to="." method="_on_TopSensor_body_entered"]
[connection signal="body_exited" from="TopSensor" to="." method="_on_TopSensor_body_exited"]
